# test-install-chat

./: .env.example  .gitmodules  Dockerfile  Dockerfile-ubuntu  README.md  conftest.py  docker-compose-production.yml  docker-compose.yml  manage.py  pyproject.toml
.circleci/: config.yml
chat/: README.md  admin.py  asgi.py  consumers.py  middleware.py  models.py  routing.py  setup.cfg
chat/api/v1/: pagination.py  permissions.py  serializers.py  urls.py  viewsets.py
chat/api/v1/tests/: factories.py  test_serializers.py  test_viewsets.py
chat/migrations/: 0001_initial.py
chat/tests/: test_consumers.py
core/: admin.py  utils.py
core/api/v1/: mixins.py  serializers.py  urls.py  views.py  viewsets.py
core/api/v1/tests/: test_mixins.py  test_serializers.py  test_views.py  test_viewsets.py
core/management/commands/: add_git_submodule.py
core/tests/: test_jwt_endpoints.py  test_utils.py
mailpit/: mailpit.yml
nginx/: Dockerfile
nginx/vhost.d/: default
templates/account/email/: account_deletion_confirmation.html  contact_us_submission.html  email_confirmation_message.html  password_reset_key_message.html
templates/admin/: index.html
templates/admin/constance/: change_list.html
templates/admin/constance/includes/: results_list.html
test_install_chat/: asgi.py  celery.py  settings.py  urls.py  utils.py  views.py  wsgi.py
users/: adapters.py  admin.py  constants.py  enums.py  forms.py  models.py  storages.py  utils.py  validators.py
users/api/v1/: serializers.py  views.py
users/api/v1/tests/: test_serializers.py  test_views.py
users/migrations/: 0002_user_phone_number.py  0003_user_birthday.py  0004_user_profile_picture.py
users/tests/: conftest.py  helpers.py  test_forms.py  test_serializers.py  test_validators.py
